<resources>
    <string name="app_name">Fantozzi</string>
    <string name="app_namesd">Fantozzi SD</string>
    <string name="app_nameweb">Sam Fantozzi WEB</string>
    <string name="app_namelabel">Fantozzi</string>
    <string name="appvyber_name">List of products-edit</string>
    <string name="appnew_name">New item</string>
    <string name="appnewobj_name">New order</string>
    <string name="appedit_name">Editing items</string>
    <string name="apppripoj_name">Join Fantozzi</string>
    <string name="title_activity_ok_pripoj">Connecting Fantozzi is OK</string>
    <string name="title_activity_ok_newobj">New order</string>
    <string name="title_activity_vyberkat">Select a category</string>
    <string name="title_activity_vybertov">Select the product item</string>
    <string name="title_activity_uloztov">The selected product item</string>
    <string name="title_activity_mojkosik">My shopping cart number %s</string>
    <string name="title_activity_zmaztov">Delete item</string>
    <string name="title_activity_objednajkosik">Order my shopping cart</string>
    <string name="title_activity_mojeobj">Unfurnished order</string>
    <string name="title_activity_mojeobjdetaily">Detail of the order</string>
    <string name="title_activity_obsluzit">Service orders</string>
    <string name="title_activity_nodoklad">No items for the operator</string>
    <string name="descimg">Powered by EDcom</string>
    <string name="action_settings">Setting</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_all_products">AllProductsActivity</string>
    <string name="title_activity_new_product">NewProductActivity</string>
    <string name="potrebujeteinternet">For correct function of the program you need to connect to the Internet!</string>
    <string name="potrebujeteinternetsync">For synchonizations you need to connect to the Internet!</string>
    <string name="niejeinternet">You do not have an Internet connection!</string>
    <string name="potrebujeteinternetdemo">For creating DEMO company you need to connect to the Internet!</string>
    <string name="popisbutviewprod">List of products</string>
    <string name="popisbutnewprod">New product</string>
    <string name="popisbutpref">Settings</string>
    <string name="popisbutnewobj">New order</string>
    <string name="popisbutvybertov">Choose an item of goods</string>
    <string name="popisbutvybranytov">My shopping cart</string>
    <string name="popisbtnplus"> + </string>
    <string name="popisbtnminus"> - </string>
    <string name="popisbtnkosik">The shopping cart</string>
    <string name="popisbtnobjednaj">Order</string>
    <string name="popisbutmojeobjednavky">My orders</string>
    <string name="popisbtnprep">Serve</string>
    <string name="popisbtnfin">End</string>
    <string name="popisbtnrefresh">Update</string>
    <string name="popisbtnmydemo">Free DEMO company 2016</string>
    <string name="popisbtneditdemo">Edit DEMO company</string>
    <string name="popisbtncreatedemo">Create Free DEMO company</string>
    <string name="popisbtnmydemook">DEMO company have created</string>
    <string name="popisbtnmydemouzje">DEMO company you have previously registered, access codes we sent to email.</string>
    <string name="settings">Settings</string>
    <string name="add_new_book_summary">Description of the setting of the text.</string>
    <string name="add_new_book_title">Setting text</string>
    <string name="servername_title">Server name.</string>
    <string name="servername_summary">Name of the server to which you want to connect for example www.eshoptest.sk/androiducto</string>
    <string name="nickname_title">Your nickname.</string>
    <string name="nickname_summary">To mark the order</string>
    <string name="druhid_title">Type of user.</string>
    <string name="druhid_summary">The priotity (0,10,20,99) sets program when you connect</string>
    <string name="cisloico_title">Customer ID.</string>
    <string name="cisloico_summary">Setting of customer ID</string>
    <string name="cisloodbm_title">Delivery place.</string>
    <string name="cisloodbm_summary">Delivery place of customer</string>
    <string name="userid_title">User number.</string>
    <string name="userid_summary">Set the program to connect to the Fantozzi - do not change the value</string>
    <string name="mojmail_title">Mail address.</string>
    <string name="mojmail_summary">It is not mandatory, it will send you to login data</string>
    <string name="username_title">Login user name.</string>
    <string name="username_summary"> </string>
    <string name="userpsw_title">User password.</string>
    <string name="userpsw_summary"> </string>
    <string name="doklad_title">The order number.</string>
    <string name="doklad_summary">Program sets the order number when creating a new order</string>
    <string name="mydemo_title">Demo company.</string>
    <string name="mydemo_summary">I have created mz demo company 0=no, 1=yes</string>
    <string name="mydemo16_title">Demo company 2016.</string>
    <string name="mydemo16_summary">I have created my demo 2016 company 0=no, 1=yes</string>
    <string name="dokmno_title">Quantity of the order.</string>
    <string name="dokmno_summary">Quantity of the order sets a program for saving goods</string>
    <string name="dokhod_title">The value of the order.</string>
    <string name="dokhod_summary">The value of orders sets the program for saving goods</string>
    <string name="vyhra_title">Winning order.</string>
    <string name="vyhra_summary">The program identifies the order as a winning and send you a warning</string>
    <string name="ordering">Classification List</string>
    <string name="order_by_title">Sorting the list by item</string>
    <string name="desc">Sorting-Ascending / Descending</string>
    <string name="desc_off">Ascending</string>
    <string name="desc_on">Descending</string>
    <string name="tovpricetext">Here will be price</string>
    <string name="preferences">Setting</string>
    <string name="connectserver">Join Fantozzi</string>
    <string name="zoznamtovaru">List of products</string>
    <string name="novytovar">New product</string>
    <string name="popiseditname">Title</string>
    <string name="popiseditprice">Price</string>
    <string name="popiseditmnoz">Quantity</string>
    <string name="popiseditspecify">Description of item</string>
    <string name="popiseditdescription">Description</string>
    <string name="popiseditsave">Save</string>
    <string name="popiseditdelete">Delete</string>
    <string name="popisaddname">Title</string>
    <string name="popisaddprice">Price</string>
    <string name="popisadddescription">Description</string>
    <string name="popisaddcreate">Save</string>
    <string name="progallproducts">Loading the products. Please wait.</string>
    <string name="prognewproducts">Creating product. Please wait.</string>
    <string name="progsavproduct">Saving product. Please wait.</string>
    <string name="progdelproduct">Deleting product. Please wait.</string>
    <string name="progpripojpinkla">Connecting Fantozzi. Please wait.</string>
    <string name="prognewobj">Loading customers. Please wait.</string>
    <string name="prognewodbm">Loading delivery place. Please wait.</string>
    <string name="progukladamobj">Saving a new order. Please wait.</string>
    <string name="progallkategorie">Loading category. Please wait.</string>
    <string name="progobjednajkosik">Ordering shopping cart. Please wait.</string>
    <string name="progmojeobj">Loading the order. Please wait.</string>
    <string name="popisconserver">Where do you want to connect, for example. www.eshoptest.sk/androiducto</string>
    <string name="popisconid">User number</string>
    <string name="popisconpsw">User password</string>
    <string name="popisbtnpripoj">Connect</string>
    <string name="popisconnick">Your NickName for identification orders</string>
    <string name="popisconmail">Your email address, we will send you the login data</string>
    <string name="popisconico">ID your company</string>
    <string name="popisconnazov">Name your company</string>
    <string name="popisconrok">Account year</string>
    <string name="okpripojpinkla">Connecting Fantozzi is OK!</string>
    <string name="okpripojpinklames">Successfully connect to the Fantozzi. Your login data entered into the settings and get them to the specified email. To continue, press OK.</string>
    <string name="okobjednajkosik">Ordering the shopping cart</string>
    <string name="okobjednajkosikmes">If you want to order all selected items in your shopping cart, press Yes.</string>
    <string name="okprazdnykosik">Your shopping cart is empty!</string>
    <string name="okprazdnykosikmes">You must first select the product items to your cart. To continue, press OK.</string>
    <string name="oknepripojeny">You are not connected to the Fantozzi!</string>
    <string name="oknepripojenymes">You must first set user and password and connect through menukey to the Fantozzi. To continue, press OK.</string>
    <string name="oknedok">You do not have created a new order!</string>
    <string name="oknedokmes">You must first set user and password and connect through menukey to the Fantozzi. To continue, press OK.</string>
    <string name="nodoklad">No items to the operator!</string>
    <string name="nodokladmes">Current evidence has been served or has no items for use. To continue, press OK.</string>
    <string name="objvyhrala">Your order won.</string>
    <string name="prihlovyhru">Sign up at the service of winning.</string>
    <string name="oknewobj">New order is created!</string>
    <string name="oknewobjmes">You can select product items to your order. To continue, press OK.</string>
    <string name="mnozstvo">qty</string>
    <string name="hodnota">am.</string>
    <string name="mena">EUR</string>
    <string name="popisinputbank">ID</string>
    <string name="popisinputodbm">Delivery place</string>
    <string name="popisbtninfo">info PLU</string>
	<string name="popisbtnpokl">Cash</string>
    <string name="popisbtnbanka">Bank</string>
    <string name="popisbtndod1">Supplier</string>
    <string name="popisbtnodb1">Customer</string>
    <string name="popisbtnzostavy">Accounting reports</string>
    <string name="popisbtndane">Tax reports</string>
    <string name="popisbtnrozne">Differently</string>
    <string name="popisbtnpenden">Cash receipts journal</string>
    <string name="popisbtnpenden2">Cash receipts journal sort 2</string>
    <string name="popisbtnprivyd">Profit and Loss Statement</string>
    <string name="kontnewpri">New receipt cash document</string>
    <string name="kontnewvyd">New expense cash document</string>
    <string name="kontnewban">New bank document</string>
    <string name="kontnewodb">New customer invoice</string>
    <string name="kontnewdod">New supplier invoice</string>
    <string name="konthladaj">Find a document</string>
    <string name="kontvsetky">View all documents</string>
    <string name="kontnextpage">Next Page</string>
    <string name="kontprevpage">Previous Page</string>
    <string name="popisDap">Date</string>
    <string name="popisCislo">Number</string>
    <string name="popisRetazec">Text</string>
    <string name="popisIco">Company ID</string>
    <string name="popisKto">Person</string>
    <string name="popisTxp">Note</string>
    <string name="popisUcm">Cash register</string>
    <string name="popisUcd">Transfer</string>
    <string name="popisRdp">VAT type</string>
    <string name="popisFak">Invoice number</string>
    <string name="popisHod">Total</string>
    <string name="popisbtnfirma">Company</string>
    <string name="popisbtnmajzav">Assets and Liabilities reports</string>
    <string name="popisbtnkniodb">Book of Accounts receivable</string>
    <string name="popisbtnknidod">Book of Accounts payable</string>
</resources>