<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
      
        <LinearLayout android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">      
 
        <Button android:id="@+id/btnUme"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_weight="1"/>
                 
    	<TextView
    	android:id="@+id/obsahKosika"
	    android:gravity="center"
        android:layout_weight="1"
        android:textSize="17sp"
    	android:visibility="invisible"
    	android:layout_width="match_parent"
    	android:layout_height="60dp" />
    	
    	<Button android:id="@+id/btninfo"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:visibility="invisible"
        android:text="@string/popisbtninfo"
        android:layout_weight="1"/>
    
     </LinearLayout>
    
    
    <Button android:id="@+id/btnPenden1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnpenden"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnPenden"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnpenden2"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnPrivyd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnprivyd"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnMajzav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnmajzav"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnKniOdb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnkniodb"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnKniDod"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnknidod"
        android:layout_marginTop="5dip"/>
 

  			     
</LinearLayout>
