<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <TextView
    android:id="@+id/inputEdiUser"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
        
    <TextView
    android:id="@+id/inputEdiServer"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    
    <TextView
    android:id="@+id/inputHodbez"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    
    <TextView
    android:id="@+id/inputDph"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	<Button android:id="@+id/btnUcm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisUcm" 
        android:layout_weight="1"/>    
    
    <EditText android:id="@+id/inputUcm"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"/>
    
    </LinearLayout>
    
    <TextView android:layout_width="fill_parent"
        android:id="@+id/inputUcmnaz"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="1dp"
        android:textSize="14sp" /> 
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	<Button android:id="@+id/btnUcd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisUcd" 
        android:layout_weight="1"/>    
    
    <EditText android:id="@+id/inputUcd"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"/>
    
    </LinearLayout>
    
    <TextView android:layout_width="fill_parent"
        android:id="@+id/inputUcdnaz"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="1dp"
        android:textSize="14sp" /> 
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
     <Button android:id="@+id/btnRdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisRdp" 
        android:layout_weight="1"/>
  
    
    <EditText android:id="@+id/inputRdp"
        android:inputType="date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"/>
    
    </LinearLayout>
    
    <TextView android:layout_width="fill_parent"
        android:id="@+id/inputRdpnaz"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="1dp"
        android:textSize="14sp" />
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisFak"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:textSize="16sp"
        android:layout_weight="1"/>    
    
    <EditText android:id="@+id/inputFak"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"/>
    
    <Button android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/popiseditsave" />
    
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    <Button android:id="@+id/btnIco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisIco" 
        android:layout_weight="1"/>    
    
    <EditText android:id="@+id/inputIco"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"/>
    
    </LinearLayout>
    
    <TextView android:layout_width="fill_parent"
        android:id="@+id/inputIconaz"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="1dp"
        android:textSize="14sp" /> 
    

 	<LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisHod"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:textSize="15sp"
        android:layout_weight="1.4"/>    
    
    <EditText android:id="@+id/inputHod"
        android:inputType="numberDecimal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.6"/>
    
    </LinearLayout>
    
 	 <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisTxp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:textSize="15sp"
        android:layout_weight="1.4"/>    
    
    <EditText android:id="@+id/inputPop"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.6"/>
    
    
    </LinearLayout>

    
    <TextView
    android:id="@+id/inputAll"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    
    <TextView
    android:id="@+id/inputAllnazserver"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    
    <TextView
    android:id="@+id/inputAllKosik"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
 
</LinearLayout>