<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
		<TextView
				android:text="@string/popisCislo"
				android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:paddingLeft="10dp"
        		android:paddingRight="10dp"
        		android:paddingTop="5dp"
        		android:textSize="18sp"
        		android:layout_weight="2"
				/>
		<EditText
				android:id="@+id/title"
				android:inputType="numberDecimal"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:paddingLeft="10dp"
        		android:paddingRight="10dp"
        		android:paddingTop="5dp"
        		android:textSize="18sp"
        		android:layout_weight="1" 
				/>
	</LinearLayout>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
		<TextView
				android:text="@string/popisDap"
				android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:paddingLeft="10dp"
        		android:paddingRight="10dp"
        		android:paddingTop="5dp"
        		android:textSize="18sp"
        		android:layout_weight="2"
				/>
		<EditText
				android:id="@+id/value"
				android:inputType="date"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:paddingLeft="10dp"
        		android:paddingRight="10dp"
        		android:paddingTop="5dp"
        		android:textSize="18sp"
        		android:layout_weight="1" 
				/>
	</LinearLayout>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
		<TextView
				android:text="@string/popisRetazec"
				android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:paddingLeft="10dp"
        		android:paddingRight="10dp"
        		android:paddingTop="5dp"
        		android:textSize="18sp"
        		android:layout_weight="2"
				/>
		<EditText
				android:id="@+id/retazec"
				android:inputType="text"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:paddingLeft="10dp"
        		android:paddingRight="10dp"
        		android:paddingTop="5dp"
        		android:textSize="18sp"
        		android:layout_weight="1" 
				/>
	</LinearLayout>
</LinearLayout>